--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/plugin-proposal-private-property-in-object": "*"
   },
   "scripts": {
-    "start": "PORT=5001 react-scripts start",
+    "start": "PORT=5001 react-scripts --openssl-legacy-provider start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
